<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/customDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Petunjuk Penggunaan"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutor_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutor_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutor_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutor_3"/>

    </LinearLayout>

    <Button
        android:id="@+id/tutor_bt_lanjutkan"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lanjutkan"
        android:backgroundTint="@color/colorPrimary"
        app:cornerRadius="10dp"
        android:textAllCaps="false"
        />

</LinearLayout>