<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.login.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:src="@drawable/login"/>
        <TextView
            android:id="@+id/login_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/logo"
            android:text="Selamat Datang "
            android:textColor="@color/black"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/login_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_welcome_text"
            android:layout_centerInParent="true"
            android:layout_marginVertical="10dp"
            android:text="@string/mulai_cek_kesehatan_mata_anda_secara_rutin_gratis_dengan_masuk_ke_aplikasi"
            android:textAlignment="center"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_desc_text"
            >
            <TextView
                android:id="@+id/email_log_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Email"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"

                />
            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_below="@+id/email_log_label"
                android:background="@drawable/edit_text_bg"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/password_log_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/password"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="emailAddress"
                android:layout_below="@+id/password_log_label"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_log"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/masuk"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="10dp"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/logintoreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/belum_memiliki_akun_daftar_sekarang"
            android:layout_alignParentStart="true"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/button_log"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>